-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-11-27	remko
	* meca/*.txt:		Numerous improvements and error fixes.
	* meca/utilmeca.c:	Fixed superfluous and missing outlines in various routines.
	* meca/psvelo.c:	Properly set default pen.
	* meca/psmeca.c:	Fixed error in plotting event titles above. Properly set
				default pen for all elements to the one set by -W.
	* test/meca/*.sh:	Many minor improvements.

2011-11-22	pwessel
	* meca/utilmeca.c:	Use PSL_setfill and not PSL_setcolor to change fills
	* test/meca/meca_4.sh:	Need -B0 to just draw axes.
	* grdinfo.c:		Now report if grid is Geographic or Cartesian as part of registration message.

2011-11-21	pwessel
	* grdview.c:		Also, when nodes are adjusted by small to avoid matching a
				contour value exactly (during contouring), the same adjustment
				must be made later when those nodes are used to determine how
				to stitch together polygons for fill.

2011-11-19	jluis
	* mgd77/mgd77.c:	Fix memory allocation bug in MGD77_Read_Header_Sequence() where 
				it was reading MGD77_RECORD_LENGTH records into a shorter 
				MGD77_HEADER_LENGTH longer variable.

2011-11-18	pwessel
	* *.c:			Make sure that incrementally allocated memory for structures
				that contain pointers is initialized to NULL before use.
	* grdview.c:		The contouring could suffer from the same round-off issues that
				affected grdcontour (and fixed back in 2004).  Now same fix is
				applied in grdview.  Also set -S to 0 as stated in man page;
				this matches default in grdcontour as well.

2011-11-17	pwessel
	* grdlandmask.c:	Now recognizes a global grid when nx*dx == 360 also.
	* nearneighbor.c:	--"--
	* grdcut.c:		--"--
	* grdfilter.c:		--"--
	* grdinfo.c:		--"--
	* grdimage.c:		--"--
	* misc/dimfilter.c:	--"--

2011-11-15	pwessel
	* gmt_unique.h:		Updated with the new common options.