@@ -2,6 +2,9 @@
 	$Id$
 -----------------------------------------------------------------------------------------
 
+2011-11-27	pwessel
+	* gmt_plot.c:		Extended the custom axis annotation to amy map projection.
+
 2011-11-27	remko
 	* meca/*.txt:		Numerous improvements and error fixes.
 	* meca/utilmeca.c:	Fixed superfluous and missing outlines in various routines.
